checking overflow scroll issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,6 +65,7 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
+  overflow-y: scroll;
 }
 
 .header .logo img {
